Fix overlay header shifting on iOS in VE
Calculate header position in JS when virtual keyboard is open. Hide
header when scrolling starts and show it when it ends (unfortunately
mobile Safari sends scroll events only when scrolling finishes).

Bug: 61240

--- a/less/common/OverlayNew.less
+++ b/less/common/OverlayNew.less
@@ -205,6 +205,19 @@
 		position: absolute;
 		top: 0;
 		white-space: nowrap;
+		// has to be here in case has no position: fixed but is positioned using
+		// JS on iOS
+		z-index: 5;
+		// prevent horizontal scrollbar when no position: fixed
+		overflow: hidden;
+		// make header reappearing less abrupt when scrolling on iOS with open
+		// keyboard
+		opacity: 0;
+
+		&.visible {
+			opacity: 1;
+			.transition( opacity .2s );
+		}
 
 		&.position-fixed {
 			// both top and left required for Android 2 for the element to be visible
